--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=literAlura
-spring.datasource.url=jdbc:postgresql://localhost/libros
-spring.datasource.username=postgres
-spring.datasource.password=sorrentinonorte21.
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.dialect=org.hibernate.dialect.HSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.format-sql=true
+
 
 spring.jpa.hibernate.ddl-auto=update
